--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,13 @@
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
+    "outDir": "./dist/types/",
     "importHelpers": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "declaration": true, 
+    "emitDeclarationOnly": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
