--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "@sterashima/vue-component-sandbox",
   "version": "0.0.0",
-  "private": true,
+  "author": "sterashima",
   "main": "./dist/vue-component-sandbox.common.js",
   "unpkg": "./dist/vue-component-sandbox.umd.min.js",
   "jsdelivr": "./dist/vue-component-sandbox.umd.min.js",
+  "files": [
+    "/dist/*.js",
+    "/dist/*.map",
+    "/dist/types/*.d.ts"
+  ],
   "scripts": {
-    "build": "vue-cli-service build --target lib --name vue-component-sandbox ./src/main.ts",
+    "build:type": "tsc --emitDeclarationOnly",
+    "build:lib": "vue-cli-service build --target lib --name vue-component-sandbox ./src/main.ts",
+    "build": "npm-run-all -s build:lib build:type",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -33,6 +40,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "typescript": "~3.9.3",
     "vue": "*",
