--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "@sterashima/vue-component-render": "^0.0.1-alpha.5",
-    "@vue/composition-api": "^1.0.0-rc.1",
     "core-js": "^3.6.5",
     "klona": "^2.0.4",
     "vue-iframe-sandbox": "^0.1.4"
@@ -34,6 +33,7 @@
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/composition-api": "*",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
@@ -58,6 +58,7 @@
     ]
   },
   "peerDependencies": {
+    "@vue/composition-api": "^1.0.0-rc.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.12"
